--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "db": "ts-node src/initDb",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -26,7 +27,13 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.4",
+    "@types/faker": "^5.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "chalk": "^4.1.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "faker": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
     "reflect-metadata": "^0.1.13",
