--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_DATABASE = yimu
-DB_USERNAME = yimu
-DB_PASSWORD = Ypszkj2020?#?
+DB_DATABASE = 
+DB_USERNAME = 
+DB_PASSWORD = 
 DB_HOST = localhost
-JWT_SECRET=secret
+JWT_SECRET = secret
