--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "nextdev": "next dev",
+    "nextbuild": "next build && next export",
+    "nextstart": "next start",
     "db": "ts-node src/initDatabase",
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -30,6 +33,8 @@
     "@nestjs/typeorm": "^7.1.4",
     "@types/faker": "^5.1.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -37,6 +42,9 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
+    "next": "^10.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
