--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "license": "UNLICENSED",
   "scripts": {
     "nextdev": "next dev",
-    "nextbuild": "next build && next export",
+    "nextbuild": "next build && next export  -o app",
     "nextstart": "next start",
     "db": "ts-node src/initDatabase",
     "prebuild": "rimraf dist",
-    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "nest start --path src/server/tsconfig.json",
+    "start:dev": "nest start --watch --path src/server/tsconfig.json",
+    "start:debug": "nest start --debug --watch --path src/server/tsconfig.json",
+    "build": "nest build --path \"src/server/tsconfig.json\"",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
