--- a/package.json
+++ b/package.json
@@ -6,90 +6,78 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "nextdev": "next dev",
-    "nextbuild": "next build && next export  -o app",
-    "nextstart": "next start",
-    "db": "ts-node src/initDatabase",
-    "prebuild": "rimraf dist",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start --path src/server/tsconfig.json",
-    "start:dev": "nest start --watch --path src/server/tsconfig.json",
-    "start:debug": "nest start --debug --watch --path src/server/tsconfig.json",
-    "build": "nest build --path \"src/server/tsconfig.json\"",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "init:db": "ts-node src/initDatabase",
+    "dev:server": "nest start --watch",
+    "debug:server": "nest start --debug --watch",
+    "build:server": "nest build",
+    "prod:server": "node dist/main",
+    "dev:app": "umi dev",
+    "start:app": "umi start",
+    "build:app": "umi build"
   },
   "dependencies": {
+    "@types/faker": "^5.1.4",
+    "@types/js-cookie": "^2.2.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.8.4",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.4",
-    "@types/faker": "^5.1.4",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "chalk": "^4.1.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "js-cookie": "^2.2.1",
+    "chalk": "^4.1.0",
     "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
-    "next": "^10.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "umi": "^3.2.14",
+    "umi-request": "^1.0.8",
+    "@umijs/route-utils": "^1.0.33",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "antd": "^4.7.0",
+    "@ant-design/icons": "^4.0.0",
+    "@ant-design/pro-descriptions": "^1.0.19",
+    "@ant-design/pro-form": "^1.2.0",
+    "@ant-design/pro-layout": "^6.4.19",
+    "@ant-design/pro-table": "^2.9.5",
+    "shed-css": "^1.4.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@nestjs/cli": "^7.5.1",
+    "@nestjs/schematics": "^7.1.3",
+    "@nestjs/testing": "^7.5.1",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "typescript": "^4.0.5",
+    "@ant-design/pro-cli": "^2.0.2",
+    "@umijs/fabric": "^2.3.0",
+    "@umijs/plugin-blocks": "^2.0.5",
+    "@umijs/plugin-esbuild": "^1.0.0-beta.2",
+    "@umijs/preset-ant-design-pro": "^1.2.0",
+    "@umijs/preset-react": "^1.4.8",
+    "@umijs/yorkie": "^2.0.3"
   }
 }
