--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "init:db": "ts-node src/initDatabase",
-    "dev:server": "nest start --watch",
-    "debug:server": "nest start --debug --watch",
-    "build:server": "nest build",
-    "prod:server": "node dist/main",
-    "dev:app": "MOCK=none umi dev",
-    "dev:app-no-mock": "MOCK=none umi dev & npm run dev:server",
-    "build:app": "umi build"
+    "dev:ser": "nest start --watch",
+    "build:ser": "nest build",
+    "dev:ui": "umi dev",
+    "dev:ui-no-mock": "MOCK=none umi dev",
+    "build:ui": "umi build",
+    "dev": "npm run dev:ser & npm run dev:ui-no-mock",
+    "build": "npm run build:ser && npm run build:ui",
+    "start": "node dist/server/main"
   },
   "dependencies": {
     "@types/faker": "^5.1.4",
@@ -56,28 +57,28 @@
     "shed-css": "^1.4.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@ant-design/pro-cli": "^2.0.2",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/testing": "^7.5.5",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.10",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "@umijs/fabric": "^2.3.0",
+    "@umijs/plugin-blocks": "^2.2.2",
+    "@umijs/plugin-esbuild": "^1.0.0-beta.2",
+    "@umijs/preset-ant-design-pro": "^1.2.0",
+    "@umijs/preset-react": "^1.4.8",
+    "@umijs/yorkie": "^2.0.3",
     "jest": "^26.6.3",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5",
-    "@ant-design/pro-cli": "^2.0.2",
-    "@umijs/fabric": "^2.3.0",
-    "@umijs/plugin-blocks": "^2.0.5",
-    "@umijs/plugin-esbuild": "^1.0.0-beta.2",
-    "@umijs/preset-ant-design-pro": "^1.2.0",
-    "@umijs/preset-react": "^1.4.8",
-    "@umijs/yorkie": "^2.0.3"
+    "typescript": "^4.1.2"
   }
 }
