--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/server", "src/utils"]
+  "include": ["src/server", "src/utils","src/main.ts"]
 }
