--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "init:db": "ts-node src/initDatabase",
+    "init": "ts-node scripts/init",
     "dev:ser": "nest start --watch",
     "build:ser": "nest build",
     "dev:ui": "umi dev",
@@ -14,47 +14,45 @@
     "build:ui": "umi build",
     "dev": "npm run dev:ser & npm run dev:ui-no-mock",
     "build": "npm run build:ser && npm run build:ui",
-    "start": "node dist/server/main"
+    "start": "node dist/main"
   },
   "dependencies": {
-    "@types/faker": "^5.1.4",
-    "@types/js-cookie": "^2.2.6",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.8.4",
+    "@ant-design/icons": "^4.0.0",
+    "@ant-design/pro-descriptions": "^1.0.19",
+    "@ant-design/pro-form": "^1.2.0",
+    "@ant-design/pro-layout": "^6.4.19",
+    "@ant-design/pro-table": "^2.9.5",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.4",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0",
+    "@types/faker": "^5.1.4",
+    "@types/js-cookie": "^2.2.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.8.4",
+    "@umijs/route-utils": "^1.0.33",
+    "antd": "^4.7.0",
+    "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "js-cookie": "^2.2.1",
-    "chalk": "^4.1.0",
     "faker": "^5.1.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "nest-winston": "^1.4.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
+    "shed-css": "^1.4.0",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
     "umi": "^3.2.14",
     "umi-request": "^1.0.8",
-    "@umijs/route-utils": "^1.0.33",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "antd": "^4.7.0",
-    "@ant-design/icons": "^4.0.0",
-    "@ant-design/pro-descriptions": "^1.0.19",
-    "@ant-design/pro-form": "^1.2.0",
-    "@ant-design/pro-layout": "^6.4.19",
-    "@ant-design/pro-table": "^2.9.5",
-    "shed-css": "^1.4.0"
+    "nest-winston": "^1.4.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.0.2",
