--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "init": "ts-node scripts/init",
     "dev:ser": "nest start --watch",
     "build:ser": "nest build",
-    "dev:ui": "umi dev",
-    "dev:ui-no-mock": "MOCK=none umi dev",
+    "dev:ui": "MOCK=none umi dev",
+    "dev:ui-mock": "umi dev",
     "build:ui": "umi build",
     "dev": "npm run dev:ser & npm run dev:ui-no-mock",
     "build": "npm run build:ser && npm run build:ui",
