--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "start": "node dist/main"
   },
   "dependencies": {
+    "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.0.0",
+    "@ant-design/pro-card": "^1.6.1",
     "@ant-design/pro-descriptions": "^1.0.19",
     "@ant-design/pro-form": "^1.2.0",
     "@ant-design/pro-layout": "^6.4.19",
@@ -42,6 +44,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nest-winston": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reflect-metadata": "^0.1.13",
@@ -50,7 +53,6 @@
     "typeorm-naming-strategies": "^2.0.0",
     "umi": "^3.2.14",
     "umi-request": "^1.0.8",
-    "nest-winston": "^1.4.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
