--- a/package.json
+++ b/package.json
@@ -20,29 +20,49 @@
     "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.0.0",
     "@ant-design/pro-card": "^1.6.1",
-    "@ant-design/pro-descriptions": "^1.0.19",
-    "@ant-design/pro-form": "^1.2.0",
-    "@ant-design/pro-layout": "^6.4.19",
-    "@ant-design/pro-table": "^2.9.5",
+    "@ant-design/pro-descriptions": "^1.0.42",
+    "@ant-design/pro-form": "^1.7.5",
+    "@ant-design/pro-layout": "^6.5.17",
+    "@ant-design/pro-table": "^2.13.2",
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.6.0",
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.19.1",
+    "@editorjs/embed": "^2.4.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.3.1",
+    "@editorjs/list": "^1.6.1",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.0",
+    "@editorjs/simple-image": "^1.4.0",
+    "@editorjs/table": "^1.3.0",
+    "@editorjs/warning": "^1.2.0",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.4",
-    "@types/faker": "^5.1.4",
+    "@types/faker": "^5.1.5",
     "@types/js-cookie": "^2.2.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mockjs": "^1.0.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.8.4",
     "@umijs/route-utils": "^1.0.33",
-    "antd": "^4.7.0",
+    "antd": "^4.9.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "editorjs-drag-drop": "^0.1.1",
     "faker": "^5.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "mockjs": "^1.1.0",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
     "react": "^16.8.6",
@@ -51,33 +71,33 @@
     "shed-css": "^1.4.0",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
-    "umi": "^3.2.14",
+    "umi": "^3.3.0",
     "umi-request": "^1.0.8",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
-    "@ant-design/pro-cli": "^2.0.2",
+    "@ant-design/pro-cli": "^2.0.3",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.5",
     "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "@umijs/fabric": "^2.3.0",
     "@umijs/plugin-blocks": "^2.2.2",
     "@umijs/plugin-esbuild": "^1.0.0-beta.2",
     "@umijs/preset-ant-design-pro": "^1.2.0",
-    "@umijs/preset-react": "^1.4.8",
+    "@umijs/preset-react": "^1.7.6",
     "@umijs/yorkie": "^2.0.3",
     "jest": "^26.6.3",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2"
   }
