--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.0.0",
-    "@ant-design/pro-card": "^1.6.1",
+    "@ant-design/pro-card": "^1.7.1",
     "@ant-design/pro-descriptions": "^1.0.42",
     "@ant-design/pro-form": "^1.7.5",
     "@ant-design/pro-layout": "^6.5.17",
@@ -54,6 +54,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.8.4",
     "@umijs/route-utils": "^1.0.33",
+    "ahooks": "^2.9.2",
     "antd": "^4.9.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
