--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.6.1",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.4",
+    "@nestjs/websockets": "^7.6.1",
+    "@types/ali-oss": "^6.0.5",
     "@types/faker": "^5.1.5",
     "@types/js-cookie": "^2.2.6",
     "@types/jsonwebtoken": "^8.5.0",
@@ -54,7 +57,9 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.8.4",
     "@umijs/route-utils": "^1.0.33",
+    "add": "^2.0.6",
     "ahooks": "^2.9.2",
+    "ali-oss": "^6.12.0",
     "antd": "^4.9.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
@@ -64,12 +69,12 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reflect-metadata": "^0.1.13",
-    "shed-css": "^1.4.0",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
     "umi": "^3.3.0",
@@ -85,6 +90,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
+    "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
