add globle config file

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DB_USERNAME =
 DB_PASSWORD = 
 DB_HOST = localhost
 JWT_SECRET = secret
+OSS_REGION = 
+OSS_ACCESSKEYID = 
+OSS_ACCESSKEYSECRET = 
+OSS_BUCKET = 
