--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "dotenv": "^8.2.0",
     "editorjs-drag-drop": "^0.1.1",
     "faker": "^5.1.0",
     "js-cookie": "^2.2.1",
