--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-socket.io": "^7.6.1",
+    "@nestjs/platform-ws": "^7.6.3",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.4",
     "@nestjs/websockets": "^7.6.1",
@@ -55,6 +56,7 @@
     "@types/mockjs": "^1.0.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.8.4",
+    "@types/socket.io-client": "^1.4.34",
     "@umijs/route-utils": "^1.0.33",
     "add": "^2.0.6",
     "ahooks": "^2.9.2",
@@ -72,15 +74,20 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
+    "quill": "^1.3.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reflect-metadata": "^0.1.13",
+    "socket.io-client": "^3.0.4",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
     "umi": "^3.3.0",
     "umi-request": "^1.0.8",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "winston-daily-rotate-file": "^4.5.0",
+    "y-quill": "^0.1.4",
+    "y-websocket": "^1.3.8",
+    "yjs": "^13.4.6"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.0.3",
