--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
-    "quill": "^1.3.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reflect-metadata": "^0.1.13",
@@ -85,7 +84,7 @@
     "umi-request": "^1.0.8",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
-    "y-quill": "^0.1.4",
+    "y-indexeddb": "^9.0.2",
     "y-websocket": "^1.3.8",
     "yjs": "^13.4.6"
   },
