--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "editorjs-drag-drop": "^0.1.1",
+    "emoji-mart": "^3.0.0",
     "faker": "^5.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -77,6 +78,7 @@
     "nest-winston": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-split": "^2.0.9",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^3.0.4",
     "typeorm": "^0.2.29",
