--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/mockjs": "^1.0.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.8.4",
+    "@types/react-virtualized": "^9.21.11",
     "@types/socket.io-client": "^1.4.34",
     "@umijs/route-utils": "^1.0.33",
     "add": "^2.0.6",
@@ -79,6 +80,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-split": "^2.0.9",
+    "react-virtualized": "^9.22.3",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^3.0.4",
     "typeorm": "^0.2.29",
