--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "dependencies": {
     "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.0.0",
-    "@ant-design/pro-card": "^1.7.1",
-    "@ant-design/pro-descriptions": "^1.0.42",
+    "@ant-design/pro-descriptions": "^1.6.2",
     "@ant-design/pro-form": "^1.7.5",
     "@ant-design/pro-layout": "^6.5.17",
+    "@ant-design/pro-list": "^1.5.3",
     "@ant-design/pro-table": "^2.13.2",
     "@editorjs/checklist": "^1.3.0",
     "@editorjs/code": "^2.6.0",
@@ -41,29 +41,23 @@
     "@editorjs/simple-image": "^1.4.0",
     "@editorjs/table": "^1.3.0",
     "@editorjs/warning": "^1.2.0",
+    "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-socket.io": "^7.6.1",
     "@nestjs/platform-ws": "^7.6.3",
+    "@nestjs/schedule": "^0.4.2",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.4",
     "@nestjs/websockets": "^7.6.1",
-    "@types/ali-oss": "^6.0.5",
-    "@types/faker": "^5.1.5",
-    "@types/js-cookie": "^2.2.6",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mockjs": "^1.0.3",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-virtualized": "^9.21.11",
-    "@types/socket.io-client": "^1.4.34",
     "@umijs/route-utils": "^1.0.33",
     "add": "^2.0.6",
     "ahooks": "^2.9.3",
     "ali-oss": "^6.12.0",
-    "antd": "^4.9.1",
+    "antd": "^4.12.3",
+    "bull": "^3.20.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -77,6 +71,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nest-winston": "^1.4.0",
+    "psd": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-split": "^2.0.9",
@@ -98,10 +93,21 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.5",
+    "@types/ali-oss": "^6.0.5",
+    "@types/bull": "^3.15.0",
+    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.8",
+    "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.16",
+    "@types/js-cookie": "^2.2.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mockjs": "^1.0.3",
     "@types/node": "^14.14.10",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-virtualized": "^9.21.11",
     "@types/socket.io": "^2.1.12",
+    "@types/socket.io-client": "^1.4.34",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
