--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "react-dom": "^16.8.6",
     "react-split": "^2.0.9",
     "react-virtualized": "^9.22.3",
+    "react-virtualized-auto-sizer": "^1.0.4",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^3.0.4",
     "typeorm": "^0.2.29",
@@ -106,6 +109,9 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-virtualized": "^9.21.11",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
+    "@types/react-window-infinite-loader": "^1.0.3",
     "@types/socket.io": "^2.1.12",
     "@types/socket.io-client": "^1.4.34",
     "@types/supertest": "^2.0.10",
