--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-split": "^2.0.9",
     "react-virtualized": "^9.22.3",
     "react-virtualized-auto-sizer": "^1.0.4",
+    "react-virtuoso": "^1.5.10",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.7",
     "reflect-metadata": "^0.1.13",
