--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "nanoid": "^3.1.20",
     "nest-winston": "^1.4.0",
     "psd": "^3.2.0",
     "react": "^16.8.6",
